# ai-web-services

./: .cursorrules  .dockerignore  .gitignore  Dockerfile  README.md  build.py  docker-compose.yml  package.json  pnpm-lock.yaml  vite.config.ts
backend/: .env.example  .gitignore  README.md  main.py  pyproject.toml
backend/server/: config.py  models.py  server.py
backend/server/middleware/: auth.py
backend/server/routes/: __init__.py  auth.py  explanations.py  synonyms.py  ws.py
backend/server/services/: bing_search.py  connection_manager.py  static_service.py  websocket_service.py
backend/server/services/explanation_service/: ai.py
backend/server/services/synonym_service/: ai.py  worker.py
backend/tests/: test_synonym_service.py
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
frontend/src/: app.css  main.tsx  routeTree.gen.ts
frontend/src/api/: auth.ts  explanations.ts  queries.ts
frontend/src/components/: nuance-analysis.tsx  theme-provider.tsx
frontend/src/components/ui/: button.test.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/lib/: routerContext.ts
frontend/src/routes/: __root.tsx  _auth.tsx  index.tsx  login.tsx
frontend/src/routes/explanations/: index.tsx  route.tsx
frontend/src/routes/explanations/$explanationId/: route.tsx
frontend/src/routes/explanations/$word1/: $word2.tsx
frontend/src/routes/synonyms/: route.tsx
frontend/src/types/: models.ts
frontend/tests/: explanations.spec.ts
(+3 files in other folders)
