[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beanie>=1.28.0",
    "duckduckgo-search>=7.2.0",
    "fastapi>=0.115.6",
    "motor>=3.6.0",
    "ollama>=0.4.4",
    "openai>=1.58.1",
    "pydantic>=2.10.4",
    "pytest>=8.3.4",
    "requests>=2.32.3",
    "uvicorn[standard]>=0.34.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["server"]
